# tauri-plugin-liquid-glass

./: Cargo.toml  README.md  build.rs  package.json  rollup.config.js
examples/tauri-app/: index.html  jsconfig.json  package.json  vite.config.js
examples/tauri-app/src/: App.svelte  main.js
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: Greet.svelte
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
