[package]
name = "tauri-plugin-liquid-glass"
version = "0.1.0"
authors = ["waruhachi"]
description = "A Tauri plugin that brings macOS's Liquid Glass and new window chrome to your apps"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-liquid-glass"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
thiserror = "2"

cocoa = "0.26.1"
objc = "0.2.7"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
